--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Blog by WQmemory</title>
+    <title>LemonCoder</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Blog</h1>
-          <h2>My Blog</h2>
+          <h1>LemonCoder</h1>
+          <h2></h2>
         </header>
 
         <section id="downloads" class="clearfix">
